# streamlit-exe-runner

./: pyproject.toml
example/: example.py
src/streamlit-exe-runner/: _core.py
